<resources>
    <string name="app_name">Invoice Total</string>
    <string name="subtotal_label">Subtotal</string>
    <string name="discount_label">Discount</string>
    <string name="discount_amount_label">Discount Amount</string>
    <string name="total_label">Total</string>
    <string name="percent_label">00%</string>
    <string name="discount_amount_tv">$0.00</string>
    <string name="total_tv">$0.00</string>
    <string name="reset_button">RESET</string>
    <string name="subtotalHint_ET">$0.00</string>
</resources>
