<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alcala.invoicetotal.MainActivity">

    <TextView
        android:id="@+id/subtotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/subtotal_label"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/subtotalET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/totalTV"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/subtotalHint_ET"
        tools:layout_editor_absoluteX="144dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_alignTop="@+id/subtotalLabel" />

    <TextView
        android:id="@+id/discountAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discount_amount_label"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="124dp"
        android:layout_marginTop="72dp"
        android:layout_below="@+id/subtotalLabel"
        android:layout_alignStart="@+id/subtotalLabel" />

    <TextView
        android:id="@+id/totalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_label"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="168dp"
        android:layout_below="@+id/discountAmountLabel"
        android:layout_alignStart="@+id/discountAmountLabel"
        android:layout_marginTop="23dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discount_label"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="80dp"
        android:layout_below="@+id/subtotalET"
        android:layout_alignStart="@+id/discountAmountLabel"
        android:layout_marginTop="12dp" />

    <TextView
        android:id="@+id/totalTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_tv"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="275dp"
        tools:layout_editor_absoluteY="168dp"
        android:layout_marginEnd="21dp"
        android:layout_above="@+id/resetButton"
        android:layout_alignEnd="@+id/resetButton" />

    <TextView
        android:id="@+id/discountAmountTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discount_amount_tv"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="275dp"
        tools:layout_editor_absoluteY="124dp"
        android:layout_alignBaseline="@+id/discountAmountLabel"
        android:layout_alignBottom="@+id/discountAmountLabel"
        android:layout_alignStart="@+id/totalTV" />

    <TextView
        android:id="@+id/percentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent_label"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="275dp"
        tools:layout_editor_absoluteY="80dp"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignEnd="@+id/subtotalET" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_dark"
        android:text="@string/reset_button"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="230dp"
        android:layout_below="@+id/totalLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp" />

</RelativeLayout>
